[gd_scene load_steps=18 format=2]

[ext_resource path="res://entities/player/Player.gd" type="Script" id=1]
[ext_resource path="res://entities/player/Stats.gd" type="Script" id=2]
[ext_resource path="res://assets/character.png" type="Texture" id=3]
[ext_resource path="res://assets/light.png" type="Texture" id=4]
[ext_resource path="res://assets/suffocating.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/pop.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/hungry.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/gulp.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/call_for_help.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/air.wav" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "call"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "move"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.0
height = 9.53674e-07

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 80.0
angular_velocity = 49.66
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 8.0
scale_random = 0.16
color = Color( 0.596078, 0.101961, 0.0431373, 1 )
hue_variation = 0.02
hue_variation_random = 0.96

[sub_resource type="CircleShape2D" id=6]
radius = 32.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="Sounds" type="Node" parent="."]

[node name="Gasping" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 5 )
volume_db = 6.0

[node name="Calling" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
volume_db = 6.0

[node name="Gulping" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 8 )
volume_db = 6.0

[node name="Hungry" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 7 )
volume_db = 6.0

[node name="Pop" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 6 )
volume_db = 6.0

[node name="Air" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )
volume_db = 6.0

[node name="Stats" type="Node" parent="."]
script = ExtResource( 2 )
food_consumption = 2.0
oxygen_consumption = 5.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 3 )
hframes = 5
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/call = SubResource( 1 )
anims/dead = SubResource( 7 )
anims/idle = SubResource( 2 )
anims/move = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -24 )
emitting = false
amount = 32
lifetime = 1.5
one_shot = true
explosiveness = 0.9
randomness = 0.1
process_material = SubResource( 5 )

[node name="ActionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483650

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActionArea"]
position = Vector2( 0, -16 )
shape = SubResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 4 )
energy = 0.5
[connection signal="food_changed" from="Stats" to="." method="_on_Stats_food_changed"]
[connection signal="help_changed" from="Stats" to="." method="_on_Stats_help_changed"]
[connection signal="oxygen_changed" from="Stats" to="." method="_on_Stats_oxygen_changed"]
[connection signal="area_shape_entered" from="ActionArea" to="." method="_on_ActionArea_area_shape_entered"]
[connection signal="area_shape_exited" from="ActionArea" to="." method="_on_ActionArea_area_shape_exited"]
